<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="today_section">Today</string>
    <string name="forecast_section">Forecast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_weather_preference">Settings</string>
    <string name="drawer_forecast">Forecast</string>
    <string name="drawer_today">Today</string>
    <string name="city_search_hint">Search city</string>
    <string name="city_search_title">City</string>
    <string name="location_search_title">Find location</string>
    <string name="forecast_acquired_location">Forecast acquired for your current location</string>
    <string name="forecast_acquired_city">Forecast acquired for</string>
    <string name="weather_acquired_location">Weather acquired for your current location</string>
    <string name="weather_acquired_city">Weather acquired for</string>


    <string name="today_location_placeholder"> , </string>
    <string name="today_description_placeholder"> | </string>
    <string name="today_humidity_placeholder"> %</string>
    <string name="today_precipitation_placeholder">mm</string>
    <string name="today_pressure_placeholder">hPa</string>
    <string name="today_windspeed_placeholder">km/h</string>

    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="millimeter">mm</string>
    <string name="kilometer_per_hour">km/h</string>
    <string name="knot">kn</string>
    <string name="inches">in</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="preference_unit_title">Unit system</string>
    <string name="preference_unit_summary">Select whether you what to use the metric system or the imperial one</string>
    <string name="preference_unit_default">1</string>
    <string name="preference_days_count_title">Number of days of forecast</string>
    <string name="preference_days_count_summary">Select the amount of days you want a forecast for. 15 days maximum will be displayed</string>
    <string name="preference_days_count_default">7</string>

    <string name="error_forecast_download">Downloading of the forecast data failed, check your internet connection</string>
    <string name="error_weather_download">Downloading of the current weather data failed, check your internet connection</string>
    <string name="error_in_city_name">There is no data available for this city</string>
    <string name="error_location">Locating you failed, check if geolocation is enabled on your device</string>
    <string name="error_no_network">No internet connexion, try later</string>

    <string name="forecast_list_icon_desc">Weather icon from the forecast</string>
    <string name="today_icon_desc">Weather icon for today\'s weather</string>
    <string name="drawer_item_icon_desc">Icon for a drawer item</string>
    <string name="today_humidity_desc">Icon for today\'s humidity</string>
    <string name="today_pressure_desc">Icon for today\'s atmospheric pressure</string>
    <string name="today_precipitation_desc">Icon for today\'s precipitations</string>
    <string name="today_wind_speed_desc">Icon for today\'s wind speed</string>
    <string name="today_wind_direction_desc">Icon for today\'s wind direction</string>

</resources>
