<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WeatherActivity">
    <item
        android:id="@+id/citySearchItem"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/city_search_hint" />
    <item
        android:id="@+id/locationSearchItem"
        android:title="@string/location_search_title"
        android:icon="@drawable/ic_my_location_white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
