<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.weather.rob.org.weather.fragment.TodayFragment"
    android:orientation="vertical"
    android:layout_margin="@dimen/margins_fragment_today_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todayWeatherIcon"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/today_icon_desc"
        android:background="@drawable/overlay_weather_status_today"
        android:layout_margin="@dimen/margins_fragment_today_content"
        android:padding="@dimen/margins_fragment_today_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todayLocation"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/today_location_placeholder"
        android:layout_marginTop="@dimen/margins_fragment_today_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_description_placeholder"
        android:id="@+id/todayWeatherDescription"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margins_fragment_today_content"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/margins_fragment_today_content"
        android:layout_marginBottom="@dimen/margins_fragment_today_content"
        android:layout_marginRight="@dimen/spacings_fragment_today_content"
        android:layout_marginLeft="@dimen/spacings_fragment_today_content"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margins_fragment_today_content"
        android:layout_marginBottom="@dimen/margins_fragment_today_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/spacings_fragment_today_content"
            android:layout_marginRight="@dimen/spacings_fragment_today_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/today_humidity_desc"
                android:src="@drawable/ic_weather_humidity"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayWeatherHumidity"
                android:text="@string/today_humidity_placeholder"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/spacings_fragment_today_content"
            android:layout_marginRight="@dimen/spacings_fragment_today_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/today_precipitation_desc"
                android:src="@drawable/ic_weather_precipitation"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayWeatherPrecipitations"
                android:text="@string/today_precipitation_placeholder"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/spacings_fragment_today_content"
            android:layout_marginRight="@dimen/spacings_fragment_today_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/today_pressure_placeholder"
                android:src="@drawable/ic_weather_pressure"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayWeatherPressure"
                android:text="@string/today_pressure_placeholder"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margins_fragment_today_content"
        android:layout_marginBottom="@dimen/margins_fragment_today_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/spacings_fragment_today_content"
            android:layout_marginRight="@dimen/spacings_fragment_today_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/today_wind_speed_desc"
                android:src="@drawable/ic_weather_wind_speed"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayWeatherWindSpeed"
                android:text="@string/today_windspeed_placeholder"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/spacings_fragment_today_content"
            android:layout_marginRight="@dimen/spacings_fragment_today_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/today_wind_direction_desc"
                android:src="@drawable/ic_weather_direction"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayWeatherDirection"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
